workspace-sf/force-app/main/default/objects/emailEndossoVidaOn__c/emailEndossoVidaOn__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>emailEndossoVidaOn</label>
</CustomObject>