workspace-sf/force-app/main/default/objects/emailEndossoVidaOn__c/fields/AlteraVidaOn__c.field-meta.xml
<CustomField>
    <fullName>AlteraVidaOn__c</fullName>
    <label>AlteraVidaOn</label>
    <type>Url</type>
</CustomField>