workspace-sf/force-app/main/default/objects/emailEndossoVidaOn__c/fields/HeaderBoasVindas__c.field-meta.xml
<CustomField>
    <fullName>HeaderBoasVindas__c</fullName>
    <label>HeaderBoasVindas</label>
    <type>Url</type>
</CustomField>