workspace-sf/force-app/main/default/objects/emailEndossoVidaOn__c/fields/HeaderCancelamento__c.field-meta.xml
<CustomField>
    <fullName>HeaderCancelamento__c</fullName>
    <label>HeaderCancelamento</label>
    <type>Url</type>
</CustomField>