workspace-sf/force-app/main/default/objects/emailEndossoVidaOn__c/fields/HeaderEndossoVidaOn__c.field-meta.xml
<CustomField>
    <fullName>HeaderEndossoVidaOn__c</fullName>
    <label>HeaderEndossoVidaOn</label>
    <type>Url</type>
</CustomField>