workspace-sf/force-app/main/default/objects/emailEndossoVidaOn__c/fields/PortoSeguroIcon__c.field-meta.xml
<CustomField>
    <fullName>PortoSeguroIcon__c</fullName>
    <label>Porto Seguro Icon</label>
    <type>Url</type>
</CustomField>